@@ -65,6 +65,8 @@
       UPGRADE: Added inbound_no_agents_no_dial campaign options.
     - MySQL_AST_CREATE_tables.sql,
       upgrade_2.14.sql: Update to Upstream database version 1533.
+  * Add upstream Rev. 2899:
+    - admin.php: Add link for inbound_no_agents_no_dial_container.
 
 2.25.23 stable
   [Jörg Frings-Fürst]
